<resources>
    <string name="app_name">CheckInApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_courseId">课程号</string>
    <string name="prompt_courseIdInPunishment">课程号,默认当天所有课程</string>
    <string name="prompt_punishment">在此输入代签处分通知</string>
    <string name="prompt_year">年份</string>
    <string name="prompt_month">月</string>
    <string name="prompt_day">日</string>
    <string name="prompt_ratio">考勤成绩所占百分比(1%-50%)</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">该账号无效</string>
    <string name="error_invalid_password">该密码格式错误</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填项</string>
    <string name="action_check_in">签到</string>
    <string name="action_check_out">签退</string>
    <string name="action_search">查询</string>
    <string name="action_complain">申诉</string>
    <string name="action_course_table">课程表</string>
    <string name="action_upload_picture">上传照片</string>
    <string name="action_set_ratio">设置考勤成绩占比</string>
    <string name="action_punishment">处分通知</string>
    <string name="action_recheck">处理复查申请</string>
    <string name="action_confirm">提交</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_check_in">CheckInActivity</string>
</resources>
